# app/Http/Controllers/Api/EventController.php
@@ -6,7 +6,9 @@ use App\Data\Animal\EventData;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Event\ListRequest;
 use App\Http\Requests\Event\StoreRequest;
-use App\Http\Resources\Animal\EventResource;
+use App\Http\Resources\Event\EventFullResource;
+use App\Http\Resources\Event\EventShortResource;
+use App\Models\Event;
 use App\Repositories\EventRepository;
 use Illuminate\Http\JsonResponse;
 use OpenApi\Annotations as OA;
@@ -20,10 +22,55 @@ class EventController extends Controller
         //
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/events",
+     *     tags={"Events"},
+     *     summary="Get list of events.",
+     *
+     *     @OA\Response(response=200, description="Successful response",
+     *
+     *         @OA\JsonContent(
+     *             type="array",
+     *
+     *             @OA\Items(ref="#/components/schemas/EventShortResource"),
+     *         )
+     *     )
+     * )
+     */
     public function index(ListRequest $request): JsonResponse
     {
         return Response::json(
-            $this->eventRepository->list($request->validated())
+            EventShortResource::collection(
+                $this->eventRepository->list(
+                    $request->safe()->collect()
+                )
+            )
+        );
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/api/events/{uuid}",
+     *     tags={"Events"},
+     *     summary="Get single event.",
+     *
+     *     @OA\Response(response=200, description="Successful response",
+     *
+     *         @OA\JsonContent(
+     *             type="array",
+     *
+     *             @OA\Items(ref="#/components/schemas/EventFullResource"),
+     *         )
+     *     )
+     * )
+     */
+    public function show(Event $event): JsonResponse
+    {
+        return Response::json(
+            new EventFullResource(
+                $this->eventRepository->one($event)
+            )
         );
     }
 
@@ -53,7 +100,7 @@ class EventController extends Controller
     public function store(StoreRequest $request): JsonResponse
     {
         return Response::json(
-            new EventResource(
+            new EventFullResource(
                 $this->eventRepository->store(
                     EventData::from($request->validated())
                 )
@@ -86,15 +133,38 @@ class EventController extends Controller
      *     )
      * )
      */
-    public function update(StoreRequest $request, string $event): JsonResponse
+    public function update(StoreRequest $request, Event $event): JsonResponse
     {
+        $this->authorize('update', $event);
+
         return Response::json(
-            new EventResource(
+            new EventFullResource(
                 $this->eventRepository->update(
                     $event,
-                    EventData::from($request->validated())
+                    EventData::from($request->validated()),
+                    $request->boolean('only_this')
                 )
             )
         );
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/events/{uuid}",
+     *     tags={"Events"},
+     *     summary="Delete an event.",
+     *
+     *     @OA\Parameter(name="uuid", required=true, example="995037a6-60b3-4055-aa14-3513aa9824ca", in="path"),
+     *
+     *     @OA\Response(response=204, description="Successful response")
+     * )
+     */
+    public function destroy(Event $event): JsonResponse
+    {
+        $this->authorize('delete', $event);
+
+        $this->eventRepository->destroy($event);
+
+        return Response::json(null, 204);
     }
 }
